--- a/c3_index.html
+++ b/c3_index.html
@@ -13,7 +13,7 @@
 		Celebrating our 75th Year		
 	</header>
 	<main>
-		
+		<!-- test -->
 	</main>
 	<footer>
 		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
